--- a/Toepassingslaag.html
+++ b/Toepassingslaag.html
@@ -30,6 +30,9 @@
 
      <p> 4.Netwerkcommunicatie initiëren en beëindigen: Deze laag is verantwoordelijk voor het tot stand brengen, onderhouden en beëindigen van communicatiesessies tussen applicaties op verschillende apparaten via het netwerk.</p>
 
+    <h2> samenvatting</h2>
+    <p>De toepassingslaag is van cruciaal belang omdat deze de interface vormt tussen de onderliggende netwerklagen en de applicaties die door gebruikers worden gebruikt, waardoor communicatie tussen applicaties mogelijk wordt. Het maakt verschillende toepassingen ongeacht het besturingssysteem of de programmeertaal verenigbaar en speelt een essentiële rol in netwerkcommunicatie.</p>
+
     <img src="3-lagemodelPlaatje.png"
   </body>
   </html> 
