--- a/logischelaag.html
+++ b/logischelaag.html
@@ -13,7 +13,10 @@
     
     <link rel="stylesheet" href="opmaak.css"> <!--link naar css-->
     <meta charset="utf-8">
+  <title>Fysiekelaag</title> <!--dit is de titel van de pagina-->
   </head>
   <body>
-    <title>Fysiekelaag</title> <!--dit is de titel van de pagina-->
+   <h2>Fysiekelaag</h2>
+    <p>De logische laag, ook wel bekend als de "business logic layer" of "service layer," is een van de lagen in een meerlaagse softwarearchitectuur.
+      Het bevindt zich meestal tussen de toepassingslaag (gebruikersinterface) en de fysiekelaag (waar gegevensopslag plaatsvindt). De logische laag is verantwoordelijk voor de implementatie van de bedrijfslogica en de functionaliteit van de softwaretoepassing. </p>
  
