--- a/logischelaag.html
+++ b/logischelaag.html
@@ -20,3 +20,18 @@
     <p>De logische laag, ook wel bekend als de "business logic layer" of "service layer," is een van de lagen in een meerlaagse softwarearchitectuur.
       Het bevindt zich meestal tussen de toepassingslaag (gebruikersinterface) en de fysiekelaag (waar gegevensopslag plaatsvindt). De logische laag is verantwoordelijk voor de implementatie van de bedrijfslogica en de functionaliteit van de softwaretoepassing. </p>
  
+    <h2> Belangrijke aspecten logische laag</h2>
+    <p>Bedrijfslogica: De logische laag bevat de code en logica die verantwoordelijk is voor de verwerking van gegevens, berekeningen, besluitvorming en andere bedrijfsgerelateerde functies van de applicatie. Het vertaalt gebruikersinvoer naar acties en resultaten.</p>
+    <p>Onafhankelijkheid van gebruikersinterface: De logische laag is ontworpen om onafhankelijk te zijn van de specifieke gebruikersinterface. 
+      Dit betekent dat dezelfde bedrijfslogica kan worden gebruikt met verschillende interfaces, zoals webtoepassingen, mobiele apps en desktopsoftware.</p>
+      <p>Services: De logische laag kan services bevatten die specifieke functies aanbieden aan de presentatielaag en andere delen van de applicatie. Deze services kunnen bijvoorbeeld worden gebruikt voor gebruikersauthenticatie, gegevensvalidatie, rapportgeneratie en meer.</p>
+      <p>Herbruikbaarheid: Door de bedrijfslogica en functionaliteit op één centrale locatie te plaatsen, kan de logische laag hergebruikt worden in verschillende delen van de applicatie. Dit verbetert de onderhoudbaarheid en vermindert duplicatie van code.</p>
+      <p>Scheiding van zorgen (Separation of Concerns): Het concept van de logische laag draagt bij aan de scheiding van zorgen in een applicatie, waarbij elk deel van de applicatie verantwoordelijk is voor een specifieke set taken, waardoor het gemakkelijker wordt om wijzigingen aan te brengen zonder andere delen van de applicatie te beïnvloeden.</p>
+
+    <h2>Samenvatting</h2>
+    <p>Over het algemeen draagt de logische laag bij aan een gestructureerde en onderhoudbare architectuur van een softwaretoepassing door de bedrijfslogica te isoleren en deze te scheiden van de gebruikersinterface en de gegevenslaag. Het maakt de software flexibel en aanpasbaar aan veranderende vereisten.</p>
+
+
+
+
+
