--- a/fysiekelaag.html
+++ b/fysiekelaag.html
@@ -40,3 +40,5 @@ De fysieke laag is verantwoordelijk voor de fysieke transmissie van gegevens ove
 
     <h2>Samenvatting</h2>
     <p>Kortom, de fysieke laag is verantwoordelijk voor het omzetten van digitale gegevens in fysieke signalen en vice versa, en het zorgt voor de fysieke infrastructuur die nodig is voor communicatie via netwerken. Het legt de basis voor de bovenliggende lagen van het OSI-model door ervoor te zorgen dat gegevens fysiek van het ene apparaat naar het andere kunnen worden verzonden.</p>
+
+     <img src="3-lagemodelPlaatje.png"
