--- a/drielagenmodel.html
+++ b/drielagenmodel.html
@@ -18,7 +18,7 @@
           <div class="dropdown-content">
               <a href="Toepassingslaag.html">Toepassingslaag</a>
               <a href="fysiekelaag.html">Fysieke laag</a>
-            <a href="Logischelaag.html">Logische laag</a>
+            <a href="logischelaag.html">Logische laag</a>
           </div>
           </div>
       </li>
