--- a/computeronderdelen.html
+++ b/computeronderdelen.html
@@ -27,6 +27,7 @@
  Moderne processors hebben meerdere kernen (cores) om taken parallel uit te voeren, waardoor de prestaties toenemen.
   Processors variëren in snelheid en architectuur, en ze zijn van cruciaal belang voor de algehele computerprestaties. 
 <body>
+    <img src="[rocessor.png"
 <h3>Werkgeheugen</h3>
   <p>
    Het werkgeheugen van een computer, meestal aangeduid als RAM (Random Access Memory), is een tijdelijke opslagplaats voor actieve gegevens en programma's tijdens de computerwerking. 
