--- a/Toepassingslaag.html
+++ b/Toepassingslaag.html
@@ -33,7 +33,7 @@
     <h2> Samenvatting</h2>
     <p>De toepassingslaag is van cruciaal belang omdat deze de interface vormt tussen de onderliggende netwerklagen en de applicaties die door gebruikers worden gebruikt, waardoor communicatie tussen applicaties mogelijk wordt. Het maakt verschillende toepassingen ongeacht het besturingssysteem of de programmeertaal verenigbaar en speelt een essentiële rol in netwerkcommunicatie.</p>
 
-    <img src="3-lagemodelPlaatje.png">
+    <img src="3-lagemodelPlaatje.png"
   </body>
   </html> 
 
