--- a/computeronderdelen2.html
+++ b/computeronderdelen2.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html> <!--dit is de homepage van mijn site-->
+<html> <!--dit is het html-element-->
+<head>
+  <title>Computer onderdelen</title>
+  <meta charset="utf-8">
+</head>
 
+<link rel="stylesheet" type="text/css" href="opmaak.css"
+
+<body>
+
+<ul>
+<li><a href="index.html">Home</a></li>
+<li><a href="binairstelsel.html"> binair stelsel</a></li> <!-- kop gemaakt om naar de uitleg van Binairstelsel en kleurmodelle te komen-->
+<li><a href="kleurmodellen.html"> kleurmodellen</a></li>
+<li><a href="drielagenmodel.html"> 3-lagenmodel</a></li>
+<li><a href="computeronderdelen.html"> Computer onderdelen</a></li> 
+<li><a href="computeronderdelen2.html"> computeronderdelen deel 2</a></li> 
+  </ul>
+
+<body>
+  <h2></h2>
