--- a/computeronderdelen2.html
+++ b/computeronderdelen2.html
@@ -19,4 +19,7 @@
   </ul>
 
 <body>
-  <h2></h2>
+  <h3>Von Neumannarchitectuur</h3>
+  <p>De Von Neumann-architectuur is een fundamenteel computerarchitectuurmodel dat is genoemd naar de Amerikaanse wiskundige en computerpionier John von Neumann. </p>
+  <p>In essentie is de Von Neumann-architectuur een basisconcept voor moderne computers. Het legt de basis voor het opslaan en uitvoeren van programma's, wat cruciaal is voor de flexibiliteit en algemeen nut van computers.
+    Het blijft een leidende architectuur in de computerwetenschap en heeft de ontwikkeling van computersystemen over de hele wereld beïnvloed.</p>
