--- a/computeronderdelen2.html
+++ b/computeronderdelen2.html
@@ -23,3 +23,11 @@
   <p>De Von Neumann-architectuur is een fundamenteel computerarchitectuurmodel dat is genoemd naar de Amerikaanse wiskundige en computerpionier John von Neumann. </p>
   <p>In essentie is de Von Neumann-architectuur een basisconcept voor moderne computers. Het legt de basis voor het opslaan en uitvoeren van programma's, wat cruciaal is voor de flexibiliteit en algemeen nut van computers.
     Het blijft een leidende architectuur in de computerwetenschap en heeft de ontwikkeling van computersystemen over de hele wereld beïnvloed.</p>
+  <h3>Besturingssysteem</h3>
+  <p>Een besturingssysteem (OS) is een essentieel softwarecomponent dat fungeert als een tussenlaag tussen de hardware van een computer en de softwaretoepassingen die erop worden uitgevoerd. Hier zijn enkele belangrijke aspecten van besturingssystemen:
+
+Taken van een besturingssysteem:
+
+Hardwarebeheer: Het besturingssysteem beheert de hardware van de computer, zoals de processor, het geheugen, de opslagapparaten en de invoer- en uitvoerapparaten.
+Bronbeheer: Het OS verdeelt computerresources (CPU-tijd, geheugenruimte, opslagcapaciteit) tussen verschillende processen en programma's om ervoor te zorgen dat ze efficiënt kunnen werken zonder conflicten.
+Gebruikersinterface: Het biedt een interface waarmee gebruikers met de computer kunnen communiceren. Dit kan een grafische gebruikersinterface (GUI) of een opdrachtregelinterface (CLI) zijn.</p>
