--- a/computeronderdelen2.html
+++ b/computeronderdelen2.html
@@ -31,3 +31,7 @@ Taken van een besturingssysteem:
 Hardwarebeheer: Het besturingssysteem beheert de hardware van de computer, zoals de processor, het geheugen, de opslagapparaten en de invoer- en uitvoerapparaten.
 Bronbeheer: Het OS verdeelt computerresources (CPU-tijd, geheugenruimte, opslagcapaciteit) tussen verschillende processen en programma's om ervoor te zorgen dat ze efficiënt kunnen werken zonder conflicten.
 Gebruikersinterface: Het biedt een interface waarmee gebruikers met de computer kunnen communiceren. Dit kan een grafische gebruikersinterface (GUI) of een opdrachtregelinterface (CLI) zijn.</p>
+
+  <h3>Talen en compilers</h3>
+<p>Talen en compilers zijn fundamentele bouwstenen van de softwareontwikkeling en spelen een cruciale rol bij het creëren van softwareapplicaties en -systemen.
+  Het begrijpen van de concepten en principes achter deze elementen is van groot belang voor softwareontwikkelaars en computerwetenschappers.</p>
