--- a/computeronderdelen2.html
+++ b/computeronderdelen2.html
@@ -35,3 +35,6 @@ Gebruikersinterface: Het biedt een interface waarmee gebruikers met de computer 
   <h3>Talen en compilers</h3>
 <p>Talen en compilers zijn fundamentele bouwstenen van de softwareontwikkeling en spelen een cruciale rol bij het creëren van softwareapplicaties en -systemen.
   Het begrijpen van de concepten en principes achter deze elementen is van groot belang voor softwareontwikkelaars en computerwetenschappers.</p>
+  <h3>toepassingsprogramma"s</h3>
+  <p>Toepassingsprogramma's, vaak aangeduid als "applicaties" of "apps", zijn softwaretoepassingen die zijn ontworpen om specifieke taken uit te voeren voor eindgebruikers. 
+    Deze programma's zijn het zichtbare en bruikbare deel van software en bieden functionaliteit voor verschillende doeleinden, zoals productiviteit, communicatie, entertainment, en meer. </p>
