--- a/logischelaag.html
+++ b/logischelaag.html
@@ -31,7 +31,7 @@
     <h2>Samenvatting</h2>
     <p>Over het algemeen draagt de logische laag bij aan een gestructureerde en onderhoudbare architectuur van een softwaretoepassing door de bedrijfslogica te isoleren en deze te scheiden van de gebruikersinterface en de gegevenslaag. Het maakt de software flexibel en aanpasbaar aan veranderende vereisten.</p>
 
-      <img src="3-lagemodelPlaatje.png"
+   <img src="3-lagemodelPlaatje.png" style="width:350px;height:300px">
 
 
 
