--- a/drielagenmodel.html
+++ b/drielagenmodel.html
@@ -13,6 +13,7 @@
       <li><a href="bitmap.html">Bitmap</a></li>
       <li><a href="computeronderdelen.html">computeronderdelen</a><!--link naar de pagina over computeronderdelen--></li>
       <li><a href="computeronderdelen2.html">uitleg computeronderdelen deel 2</a></li> 
+      <li><a href="moederbord.html">uitleg moederbord</a></li>
       <li class="dropdown">
           <a href="drielagenmodel.html" class="dropbtn">drielagenmodel</a>
           <div class="dropdown-content">
