--- a/computeronderdelen.html
+++ b/computeronderdelen.html
@@ -16,6 +16,7 @@
 <li><a href="drielagenmodel.html"> 3-lagenmodel</a></li>
 <li><a href="computeronderdelen.html"> Computer onderdelen</a></li> 
 <li><a href="computeronderdelen2.html"> computeronderdelen deel 2</a></li> 
+<li><a href="moederbord.html">uitleg moederbord</a></li>
   </ul>
 
 <body>
