--- a/VonNeumannarchitectuur.html
+++ b/VonNeumannarchitectuur.html
@@ -8,7 +8,7 @@
 <li><a href="drielagenmodel.html">Uitleg 3-lagenmodel</a></li>
 <li><a href="computeronderdelen.html">Uitleg Computer onderdelen</a></li> 
 <li><a href="computeronderdelen2.html">uitleg computeronderdelen deel 2</a></li> 
-<li><a href="moederbord.html">uitleg moederbord</a></li>
+<li><a href="VonNeumannarchitectuur.html">uitleg moederbord</a></li>
   </ul> 
     
     <link rel="stylesheet" href="opmaak.css"> <!--link naar css-->
