--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <li><a href="drielagenmodel.html">3-lagenmodel</a> <!--link naar de pagina over het 3-lagemodel--></li>
       <li><a href="computeronderdelen.html">computeronderdelen</a> <!--link naar de pagina over computeronderdelen--></li>
       <li><a href="computeronderdelen2.html">uitleg computeronderdelen deel 2</a></li> 
-      <li><a href="moederbord.html">uitleg moederbord</a></li>
+      <li><a href="VonNeumannarchitectuur">uitleg moederbord</a></li>
     </ul>
 
 <article> <!--begin artikel-->
