--- a/Toepassingslaag.html
+++ b/Toepassingslaag.html
@@ -8,6 +8,8 @@
 <li><a href="drielagenmodel.html">Uitleg 3-lagenmodel</a></li>
 <li><a href="computeronderdelen.html">Uitleg Computer onderdelen</a></li> 
 <li><a href="computeronderdelen2.html">uitleg computeronderdelen deel 2</a></li> 
+<li><a href="VonNeumannarchitectuur">uitleg VonnNeumannarchitectuur</a></li>
+
   </ul> 
     
     <title>Toepassingslaag</title> <!--dit is de titel van de pagina-->
