--- a/logischelaag.html
+++ b/logischelaag.html
@@ -8,6 +8,7 @@
 <li><a href="drielagenmodel.html">Uitleg 3-lagenmodel</a></li>
 <li><a href="computeronderdelen.html">Uitleg Computer onderdelen</a></li> 
 <li><a href="computeronderdelen2.html">uitleg computeronderdelen deel 2</a></li> 
+<li><a href="VonNeumannarchitectuur">uitleg VonnNeumannarchitectuur</a></li>
   </ul> 
     
     
