--- a/VonNeumannarchitectuur.html
+++ b/VonNeumannarchitectuur.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="opmaak.css"> <!--link naar css-->
     <meta charset="utf-8">
   
-    <title>Fysiekelaag</title> <!--dit is de titel van de pagina-->
+    <title>VonnNeumannarchitectuur</title> <!--dit is de titel van de pagina-->
+    
   </head>
   <body>
