--- a/VonNeumannarchitectuur.html
+++ b/VonNeumannarchitectuur.html
@@ -14,7 +14,9 @@
     <link rel="stylesheet" href="opmaak.css"> <!--link naar css-->
     <meta charset="utf-8">
   
-    <title>VonnNeumannarchitectuur</title> <!--dit is de titel van de pagina-->
-    
+    <title>VonnNeumannarchitectuur</title> <!--dit is de titel van de pagina--> 
   </head>
   <body>
+    <h2>Achtergondinformatie</h2>
+    <p>De Von Neumann-architectuur, vernoemd naar de Hongaarse wiskundige en computerwetenschapper John von Neumann, is een fundamenteel concept in de computerwetenschappen en de basis voor de meeste moderne computersystemen.
+      Deze architectuur definieert de organisatie van een digitale computer en de manier waarop deze gegevens en instructies verwerkt.</p>
