--- a/VonNeumannarchitectuur.html
+++ b/VonNeumannarchitectuur.html
@@ -20,3 +20,17 @@
     <h2>Achtergondinformatie</h2>
     <p>De Von Neumann-architectuur, vernoemd naar de Hongaarse wiskundige en computerwetenschapper John von Neumann, is een fundamenteel concept in de computerwetenschappen en de basis voor de meeste moderne computersystemen.
       Deze architectuur definieert de organisatie van een digitale computer en de manier waarop deze gegevens en instructies verwerkt.</p>
+    <h2>Kenmerken VonnNeumannarchitectuur</h2>
+    <p>Gescheiden geheugens: De Von Neumann-architectuur maakt gebruik van twee afzonderlijke geheugens voor het opslaan van programma's en gegevens. Het programma-geheugen (ook wel instructiegeheugen genoemd) bevat de machinecode-instructies die door de CPU worden uitgevoerd, terwijl het gegevensgeheugen (ook wel werkgeheugen genoemd) gegevens opslaat die door het programma worden verwerkt.
+
+Een enkele centrale verwerkingseenheid (CPU): In deze architectuur wordt alle rekenkundige en logische verwerking uitgevoerd door één CPU. De CPU haalt instructies op uit het programma-geheugen, decodeert deze, voert de instructies uit en slaat de resultaten op in het gegevensgeheugen.
+
+Sequential Execution: Instructies worden in sequentiële volgorde uitgevoerd, één voor één. Dit betekent dat de CPU een instructie pas ophaalt en uitvoert nadat de vorige is voltooid.
+
+Fetch-Decode-Execute Cycle: Dit is het kernproces in de Von Neumann-architectuur. Het omvat het ophalen (fetch) van een instructie uit het programma-geheugen, het decoderen (decode) van de instructie om te begrijpen wat er moet gebeuren, en het uitvoeren (execute) van de instructie op de gegevens in het gegevensgeheugen.
+
+Oplosbaarheid: Het programma-geheugen en het gegevensgeheugen zijn beide toegankelijk voor de CPU en kunnen worden beschreven en gelezen. Dit maakt dynamische programma's mogelijk, waarbij het programma zichzelf kan aanpassen op basis van de gegevens.
+
+Opslag van instructies en gegevens in binair formaat: Alle instructies en gegevens worden opgeslagen in binaire vorm, bestaande uit nullen en enen, die de CPU kan begrijpen en verwerken.
+
+</p>
