--- a/VonNeumannarchitectuur.html
+++ b/VonNeumannarchitectuur.html
@@ -17,7 +17,7 @@
     <title>VonnNeumannarchitectuur</title> <!--dit is de titel van de pagina--> 
   </head>
   <body>
-    <h2>Achtergondinformatie</h2>
+    <h2>Achtergrondinformatie</h2>
     <p>De Von Neumann-architectuur, vernoemd naar de Hongaarse wiskundige en computerwetenschapper John von Neumann, is een fundamenteel concept in de computerwetenschappen en de basis voor de meeste moderne computersystemen.
       Deze architectuur definieert de organisatie van een digitale computer en de manier waarop deze gegevens en instructies verwerkt.</p>
     <h2>Kenmerken VonnNeumannarchitectuur</h2>
