--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -15,7 +15,7 @@
       <li><a href="drielagenmodel.html">3-lagenmodel</a> <!--link naar de pagina over het 3-lagemodel--></li>
       <li><a href="computeronderdelen.html">computeronderdelen</a> <!--link naar de pagina over computeronderdelen--></li>
       <li><a href="computeronderdelen2.html">uitleg computeronderdelen deel 2</a></li> 
-      <li><a href="VonNeumannarchitectuur">uitleg moederbord</a></li>
+      <li><a href="VonNeumannarchitectuur">uitleg VonNeumannarchitectuur</a></li>
     </ul> 
     <h1>Uitleg Kleurmodellen</h1> <!--hoofdkopje van tekstgedeelte-->
 
