--- a/VonNeumannarchitectuur.html
+++ b/VonNeumannarchitectuur.html
@@ -17,20 +17,21 @@
     <title>VonnNeumannarchitectuur</title> <!--dit is de titel van de pagina--> 
   </head>
   <body>
-    <h2>Achtergrondinformatie</h2>
-    <p>De Von Neumann-architectuur, vernoemd naar de Hongaarse wiskundige en computerwetenschapper John von Neumann, is een fundamenteel concept in de computerwetenschappen en de basis voor de meeste moderne computersystemen.
-      Deze architectuur definieert de organisatie van een digitale computer en de manier waarop deze gegevens en instructies verwerkt.</p>
-    <h2>Kenmerken VonnNeumannarchitectuur</h2>
-    <p>Gescheiden geheugens: De Von Neumann-architectuur maakt gebruik van twee afzonderlijke geheugens voor het opslaan van programma's en gegevens. Het programma-geheugen (ook wel instructiegeheugen genoemd) bevat de machinecode-instructies die door de CPU worden uitgevoerd, terwijl het gegevensgeheugen (ook wel werkgeheugen genoemd) gegevens opslaat die door het programma worden verwerkt.
+    <h2>VonNeumannarchitectuur</h2>
+    <p>De Von Neumann-architectuur is een fundamenteel concept in de computerwetenschappen dat de basis vormt voor de meeste moderne computersystemen. 
+      Deze architectuur, vernoemd naar de Hongaarse wiskundige en computerpionier John von Neumann, werd voor het eerst geïntroduceerd in de jaren 1940 en heeft sindsdien de ontwikkeling van digitale computers gedomineerd.
+    <h2>Kenmerken</h2>
+      <p>Gescheiden geheugens: De architectuur maakt gebruik van twee afzonderlijke geheugens: het programma-geheugen en het gegevensgeheugen. Het programma-geheugen bevat de machinecode-instructies die door de centrale verwerkingseenheid (CPU) worden uitgevoerd, terwijl het gegevensgeheugen gegevens opslaat die door het programma worden verwerkt.
 
-Een enkele centrale verwerkingseenheid (CPU): In deze architectuur wordt alle rekenkundige en logische verwerking uitgevoerd door één CPU. De CPU haalt instructies op uit het programma-geheugen, decodeert deze, voert de instructies uit en slaat de resultaten op in het gegevensgeheugen.
+Een enkele CPU: In deze architectuur wordt alle rekenkundige en logische verwerking uitgevoerd door één CPU. De CPU haalt instructies op uit het programma-geheugen, decodeert ze, voert ze uit en slaat de resultaten op in het gegevensgeheugen.
+      Opslag van instructies en gegevens in binair formaat: Alle instructies en gegevens worden opgeslagen in binaire vorm, bestaande uit nullen en enen, die de CPU kan begrijpen en verwerken.</p>
 
-Sequential Execution: Instructies worden in sequentiële volgorde uitgevoerd, één voor één. Dit betekent dat de CPU een instructie pas ophaalt en uitvoert nadat de vorige is voltooid.
+    <h2>Overige informatie</h2>
+    <p>De Von Neumann-architectuur is aantrekkelijk vanwege zijn eenvoud en flexibiliteit. Het maakt generieke computers mogelijk die verschillende taken kunnen uitvoeren door verschillende programma's te laden. Deze architectuur heeft bijgedragen aan de ontwikkeling van moderne programmeertalen, besturingssystemen en softwaretoepassingen.
 
-Fetch-Decode-Execute Cycle: Dit is het kernproces in de Von Neumann-architectuur. Het omvat het ophalen (fetch) van een instructie uit het programma-geheugen, het decoderen (decode) van de instructie om te begrijpen wat er moet gebeuren, en het uitvoeren (execute) van de instructie op de gegevens in het gegevensgeheugen.
+Hoewel de Von Neumann-architectuur veel voordelen biedt, heeft het ook beperkingen. Seriële verwerking kan prestatiebeperkingen opleggen, vooral voor taken die parallelle verwerking vereisen. De flessenhals van gegevensoverdracht tussen programma- en gegevensgeheugen kan de prestaties beïnvloeden, en er zijn beveiligingsrisico's, zoals bufferoverloopaanvallen, geassocieerd met het feit dat programma's gegevens kunnen overschrijven.
 
-Oplosbaarheid: Het programma-geheugen en het gegevensgeheugen zijn beide toegankelijk voor de CPU en kunnen worden beschreven en gelezen. Dit maakt dynamische programma's mogelijk, waarbij het programma zichzelf kan aanpassen op basis van de gegevens.
+Ondanks deze beperkingen blijft de Von Neumann-architectuur de basis voor de meeste moderne computers en blijft het een cruciaal concept in de computerwetenschappen. Het heeft de weg vrijgemaakt voor de evolutie van digitale technologie en blijft relevant in een breed scala van toepassingen, van persoonlijke computers tot supercomputers.</p>
+   
 
-Opslag van instructies en gegevens in binair formaat: Alle instructies en gegevens worden opgeslagen in binaire vorm, bestaande uit nullen en enen, die de CPU kan begrijpen en verwerken.
 
-</p>
