--- a/VonNeumannarchitectuur.html
+++ b/VonNeumannarchitectuur.html
@@ -33,5 +33,5 @@ Hoewel de Von Neumann-architectuur veel voordelen biedt, heeft het ook beperking
 
 Ondanks deze beperkingen blijft de Von Neumann-architectuur de basis voor de meeste moderne computers en blijft het een cruciaal concept in de computerwetenschappen. Het heeft de weg vrijgemaakt voor de evolutie van digitale technologie en blijft relevant in een breed scala van toepassingen, van persoonlijke computers tot supercomputers.</p>
    
-
+ <img src="VonNeumannarchitectuur.png" style="width:350px;height:300px">
 
