--- a/computeronderdelen.html
+++ b/computeronderdelen.html
@@ -68,7 +68,7 @@
     Randapparatuur van een computer zijn externe apparaten die zijn aangesloten op de computer om specifieke functies uit te voeren.
     Dit omvat invoerapparaten zoals toetsenborden, muizen en webcams, evenals uitvoerapparaten zoals printers en luidsprekers. 
     Randapparatuur breidt de mogelijkheden van een computer uit en stelt gebruikers in staat om taken uit te voeren en informatie te communiceren.
-    <img src=" style="width:350px;height:300px">
+    <img src="randappratuur.png" style="width:350px;height:300px">
     <p>
     <h3>Verbindingen: kabels/interfaces</h3>
     Verbindingen en interfaces van een computer zijn fysieke of draadloze middelen waarmee apparaten worden aangesloten. 
