--- a/computeronderdelen2.html
+++ b/computeronderdelen2.html
@@ -37,8 +37,9 @@ Gebruikersinterface: Het biedt een interface waarmee gebruikers met de computer 
   <h3>Talen en compilers</h3>
 <p>Talen en compilers zijn fundamentele bouwstenen van de softwareontwikkeling en spelen een cruciale rol bij het creëren van softwareapplicaties en -systemen.
   Het begrijpen van de concepten en principes achter deze elementen is van groot belang voor softwareontwikkelaars en computerwetenschappers.</p>
+  <img src="compiler.png" style="width:350px;height:300px">
   <h3>Toepassingsprogramma"s</h3>
-  <p>Toepassingsprogramma's, vaak aangeduid als "applicaties" of "apps", zijn softwaretoepassingen die zijn ontworpen om specifieke taken uit te voeren voor eindgebruikers. 
+    <p>Toepassingsprogramma's, vaak aangeduid als "applicaties" of "apps", zijn softwaretoepassingen die zijn ontworpen om specifieke taken uit te voeren voor eindgebruikers. 
     Deze programma's zijn het zichtbare en bruikbare deel van software en bieden functionaliteit voor verschillende doeleinden, zoals productiviteit, communicatie, entertainment, en meer. </p>
   <h3>Databases</h3>
   <p>Databases zijn georganiseerde verzamelingen van gestructureerde gegevens die worden opgeslagen en beheerd met behulp van specifieke software, bekend als een databasesysteem.</p>
