--- a/computeronderdelen.html
+++ b/computeronderdelen.html
@@ -26,8 +26,8 @@
   Het is verantwoordelijk voor het uitvoeren van rekenkundige en logische taken die nodig zijn om softwareprogramma's te laten draaien. 
  De CPU verwerkt instructies in de vorm van elektrische signalen en voert complexe berekeningen uit, waaronder het beheer van gegevens, het uitvoeren van software-instructies en het coördineren van hardwarecomponenten.
  Moderne processors hebben meerdere kernen (cores) om taken parallel uit te voeren, waardoor de prestaties toenemen.
-  Processors variëren in snelheid en architectuur, en ze zijn van cruciaal belang voor de algehele computerprestaties.   <img src="processor.png"
-<body>             
+  Processors variëren in snelheid en architectuur, en ze zijn van cruciaal belang voor de algehele computerprestaties.  
+    <img src="processor.png"
 <h3>Werkgeheugen</h3>
   <p>
    Het werkgeheugen van een computer, meestal aangeduid als RAM (Random Access Memory), is een tijdelijke opslagplaats voor actieve gegevens en programma's tijdens de computerwerking. 
