--- a/computeronderdelen2.html
+++ b/computeronderdelen2.html
@@ -17,7 +17,7 @@
 <li><a href="drielagenmodel.html"> 3-lagenmodel</a></li>
 <li><a href="computeronderdelen.html"> Computer onderdelen</a></li> 
 <li><a href="computeronderdelen2.html"> computeronderdelen deel 2</a></li> 
-<li><a href="moederbord.html">uitleg VonNeumannarchitectuur</a></li>
+<li><a href="VonNeumannarchitectuur.html">uitleg VonNeumannarchitectuur</a></li>
   </ul>
 
 <body>
