--- a/uitlegvideo.html
+++ b/uitlegvideo.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html> <!--dit is de 3-lagenmodel pagina van de site-->
+<html> <!--dit is het html-element-->
+  <head>
+    <title>3-lagenmodel</title> <!--dit is de titel van de pagina over 3-lagemodel-->
+    <link rel="stylesheet" href="opmaak.css"> <!--link naar css-->
+    <meta charset="utf-8">
+  </head>
+  <body>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="binairstelsel.html">Binair stelsel</a></li>
+      <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
+      <li><a href="bitmap.html">Bitmap</a></li>
+      <li><a href="computeronderdelen.html">computeronderdelen</a><!--link naar de pagina over computeronderdelen--></li>
+      <li><a href="computeronderdelen2.html">uitleg computeronderdelen deel 2</a></li> 
+      <li><a href="VonNeumannarchitectuur">uitleg VonNeumannarchitectuur</a></li>
 
+      Hier komt de uitlegvideo over mijn webiste:
+      
