--- a/uitlegvideo.html
+++ b/uitlegvideo.html
@@ -17,4 +17,5 @@
 
       Hier komt de uitlegvideo over mijn webiste:
 https://www.youtube.com/watch?v=GcGyg_UKMPs
+        <a href="https://www.youtube.com/watch?v=GcGyg_UKMPs"> 
       
