--- a/uitlegvideo.html
+++ b/uitlegvideo.html
@@ -14,6 +14,7 @@
       <li><a href="computeronderdelen.html">computeronderdelen</a><!--link naar de pagina over computeronderdelen--></li>
       <li><a href="computeronderdelen2.html">uitleg computeronderdelen deel 2</a></li> 
       <li><a href="VonNeumannarchitectuur">uitleg VonNeumannarchitectuur</a></li>
+      <li><a href="Uitlegvideo">uitlegviedo over website</a></li>
 
       Hier komt de uitlegvideo over mijn webiste:
         <a href="https://www.youtube.com/watch?v=GcGyg_UKMPs"> 
