--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -16,6 +16,7 @@
       <li><a href="computeronderdelen.html">computeronderdelen</a> <!--link naar de pagina over computeronderdelen--></li>
       <li><a href="computeronderdelen2.html">uitleg computeronderdelen deel 2</a></li> 
       <li><a href="VonNeumannarchitectuur">uitleg VonNeumannarchitectuur</a></li>
+      <li><a href="Uitlegvideo">uitlegviedo over website</a></li>
     </ul> 
     
     <h1>Uitleg binaire stelsel</h1> <!--hoofdkopje van tekstgedeelte-->
