--- a/computeronderdelen.html
+++ b/computeronderdelen.html
@@ -9,14 +9,15 @@
 
 <body>
 
-<ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="binairstelsel.html"> binair stelsel</a></li> <!-- kop gemaakt om naar de uitleg van Binairstelsel en kleurmodelle te komen-->
-<li><a href="kleurmodellen.html"> kleurmodellen</a></li>
-<li><a href="drielagenmodel.html"> 3-lagenmodel</a></li>
-<li><a href="computeronderdelen.html"> Computer onderdelen</a></li> 
-<li><a href="computeronderdelen2.html"> computeronderdelen deel 2</a></li> 
-<li><a href="VonNeumannarchitectuur.html">uitleg VonNeumannarchitectuur</a></li>
+  <ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="binairstelsel.html"> binair stelsel</a></li> <!-- kop gemaakt om naar de uitleg van Binairstelsel en kleurmodelle te komen-->
+  <li><a href="kleurmodellen.html"> kleurmodellen</a></li>
+  <li><a href="drielagenmodel.html"> 3-lagenmodel</a></li>
+  <li><a href="computeronderdelen.html"> Computer onderdelen</a></li> 
+  <li><a href="computeronderdelen2.html"> computeronderdelen deel 2</a></li> 
+  <li><a href="VonNeumannarchitectuur.html">uitleg VonNeumannarchitectuur</a></li>
+  <li><a href="Uitlegvideo">uitlegviedo over website</a></li>
   </ul>
 
 <body>
