--- a/logischelaag.html
+++ b/logischelaag.html
@@ -9,6 +9,7 @@
 <li><a href="computeronderdelen.html">Uitleg Computer onderdelen</a></li> 
 <li><a href="computeronderdelen2.html">uitleg computeronderdelen deel 2</a></li> 
 <li><a href="VonNeumannarchitectuur">uitleg VonnNeumannarchitectuur</a></li>
+<li><a href="Uitlegvideo">uitlegviedo over website</a></li>
   </ul> 
     
     
