--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -16,7 +16,7 @@
       <li><a href="computeronderdelen.html">computeronderdelen</a> <!--link naar de pagina over computeronderdelen--></li>
       <li><a href="computeronderdelen2.html">uitleg computeronderdelen deel 2</a></li> 
       <li><a href="VonNeumannarchitectuur">uitleg VonNeumannarchitectuur</a></li>
-      <li><a href="Uitlegvideo">uitlegviedo over website</a></li>
+      <li><a href="Uitlegvideo">uitlegvideo over website</a></li>
     </ul> 
     <h1>Uitleg Kleurmodellen</h1> <!--hoofdkopje van tekstgedeelte-->
 
