--- a/bitmap.html
+++ b/bitmap.html
@@ -15,8 +15,8 @@
       <li><a href="drielagenmodel.html">3-lagenmodel</a> <!--link naar de pagina over het 3-lagemodel--></li>
       <li><a href="computeronderdelen.html">computeronderdelen</a> <!--link naar de pagina over computeronderdelen--></li>
       <li><a href="computeronderdelen2.html">uitleg computeronderdelen deel 2</a></li> 
-      <li><a href="VonNeumannarchitectuur">uitleg VonNeumannarchitectuur</a></li>
-      <li><a href="Uitlegvideo">uitlegvideo over website</a></li>
+      <li><a href="VonNeumannarchitectuur.html">uitleg VonNeumannarchitectuur</a></li>
+      <li><a href="Uitlegvideo.html">uitlegvideo over website</a></li>
     </ul> 
     
     <h1>Bitmap, vectorafbeeldingen en mobiele signalen</h1> <!--hoofdkopje van tekstgedeelte-->
