--- a/drielagenmodel.html
+++ b/drielagenmodel.html
@@ -13,8 +13,8 @@
       <li><a href="bitmap.html">Bitmap</a></li>
       <li><a href="computeronderdelen.html">computeronderdelen</a><!--link naar de pagina over computeronderdelen--></li>
       <li><a href="computeronderdelen2.html">uitleg computeronderdelen deel 2</a></li> 
-      <li><a href="VonNeumannarchitectuur">uitleg VonNeumannarchitectuur</a></li>
-      <li><a href="Uitlegvideo">uitlegvideo over website</a></li>
+      <li><a href="VonNeumannarchitectuur.html">uitleg VonNeumannarchitectuur</a></li>
+      <li><a href="Uitlegvideo.html">uitlegvideo over website</a></li>
       <li class="dropdown">
           <a href="drielagenmodel.html" class="dropbtn">drielagenmodel</a>
           <div class="dropdown-content">
