--- a/computeronderdelen.html
+++ b/computeronderdelen.html
@@ -17,7 +17,7 @@
   <li><a href="computeronderdelen.html"> Computer onderdelen</a></li> 
   <li><a href="computeronderdelen2.html"> computeronderdelen deel 2</a></li> 
   <li><a href="VonNeumannarchitectuur.html">uitleg VonNeumannarchitectuur</a></li>
-  <li><a href="Uitlegvideo">uitlegvideo over website</a></li>
+  <li><a href="Uitlegvideo.html">uitlegvideo over website</a></li>
   </ul>
 
 <body>
