--- a/logischelaag.html
+++ b/logischelaag.html
@@ -8,8 +8,8 @@
 <li><a href="drielagenmodel.html">Uitleg 3-lagenmodel</a></li>
 <li><a href="computeronderdelen.html">Uitleg Computer onderdelen</a></li> 
 <li><a href="computeronderdelen2.html">uitleg computeronderdelen deel 2</a></li> 
-<li><a href="VonNeumannarchitectuur">uitleg VonnNeumannarchitectuur</a></li>
-<li><a href="Uitlegvideo">uitlegvideo over website</a></li>
+<li><a href="VonNeumannarchitectuur.html">uitleg VonnNeumannarchitectuur</a></li>
+<li><a href="Uitlegvideo.html">uitlegvideo over website</a></li>
   </ul> 
     
     
