--- a/uitlegvideo.html
+++ b/uitlegvideo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> <!--dit is de 3-lagenmodel pagina van de site-->
 <html> <!--dit is het html-element-->
   <head>
-    <title>3-lagenmodel</title> <!--dit is de titel van de pagina over 3-lagemodel-->
+    <title>uitlegvideo</title> <!--dit is de titel van de pagina over uitlegvideo-->
     <link rel="stylesheet" href="opmaak.css"> <!--link naar css-->
     <meta charset="utf-8">
   </head>
