--- a/uitlegvideo.html
+++ b/uitlegvideo.html
@@ -1,21 +1,24 @@
-<!DOCTYPE html> <!--dit is de 3-lagenmodel pagina van de site-->
+<!DOCTYPE html> <!--dit is de pagina over kleurmodellen van de site-->
 <html> <!--dit is het html-element-->
-  <head>
-    <title>uitlegvideo</title> <!--dit is de titel van de pagina over uitlegvideo-->
+<head>
+    <title>Kleurmodellen</title> <!--dit is de title van de pagina kleurmodellen-->
     <link rel="stylesheet" href="opmaak.css"> <!--link naar css-->
     <meta charset="utf-8">
-  </head>
+</head>
   <body>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="binairstelsel.html">Binair stelsel</a></li>
-      <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
-      <li><a href="bitmap.html">Bitmap</a></li>
-      <li><a href="computeronderdelen.html">computeronderdelen</a><!--link naar de pagina over computeronderdelen--></li>
+    <ul> <!--unorderd list-->
+      <li><a href="index.html">Home</a> <!--link terug naar de homepage--></li>
+      <li><a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar pagina over binair stelsel--></li> 
+      <li><a href="kleurmodellen.html">Kleurmodellen</a> <!--link terug naar pagina over kleurmodellen--></li>
+      <li><a href="bitmap.html">Bitmap</a> <!--link terug naar de pagina over bitmap--></li>
+      <li><a href="drielagenmodel.html">3-lagenmodel</a> <!--link naar de pagina over het 3-lagemodel--></li>
+      <li><a href="computeronderdelen.html">computeronderdelen</a> <!--link naar de pagina over computeronderdelen--></li>
       <li><a href="computeronderdelen2.html">uitleg computeronderdelen deel 2</a></li> 
-      <li><a href="VonNeumannarchitectuur">uitleg VonNeumannarchitectuur</a></li>
-      <li><a href="Uitlegvideo">uitlegviedo over website</a></li>
+      <li><a href="VonNeumannarchitectuur.html">uitleg VonNeumannarchitectuur</a></li>
+      <li><a href="Uitlegvideo.html">uitlegvideo over website</a></li>
+    </ul> 
+    <h1>Uitlegvideo webiste</h1> <!--hoofdkopje van tekstgedeelte-->
 
-      Hier komt de uitlegvideo over mijn webiste:
+      
         <a href="https://www.youtube.com/watch?v=GcGyg_UKMPs"> 
       
