--- a/logischelaag.html
+++ b/logischelaag.html
@@ -9,7 +9,7 @@
 <li><a href="computeronderdelen.html">Uitleg Computer onderdelen</a></li> 
 <li><a href="computeronderdelen2.html">uitleg computeronderdelen deel 2</a></li> 
 <li><a href="VonNeumannarchitectuur.html">uitleg VonnNeumannarchitectuur</a></li>
-<li><a href="Uitlegvideo.html">uitlegvideo over website</a></li>
+<li><a href="uitlegvideo.html">uitlegvideo over website</a></li>
   </ul> 
     
     
