--- a/uitlegvideo.html
+++ b/uitlegvideo.html
@@ -19,4 +19,8 @@
     </ul> 
     <h1>Uitlegvideo webiste</h1> <!--hoofdkopje van tekstgedeelte-->
  <a href="https://www.youtube.com/watch?v=GcGyg_UKMPs"> 
+
+     <a href="https://www.youtube.com/watch?v=GcGyg_UKMPs">  
+        <img src="uitlegvideo.png" style="width:350px;height:250px"> <!--plaatje van filmpje over binair rekenen-->
+    </a> 
       
