--- a/uitlegvideo.html
+++ b/uitlegvideo.html
@@ -21,6 +21,6 @@
  <a href="https://www.youtube.com/watch?v=GcGyg_UKMPs"> 
 
      <a href="https://www.youtube.com/watch?v=GcGyg_UKMPs">  
-        <img src="uitlegvideo.png" style="width:350px;height:250px"> <!--plaatje van filmpje over binair rekenen-->
+        <img src="uitlegvideo.png" style="width:450px;height:350px"> 
     </a> 
       
