--- a/VonNeumannarchitectuur.html
+++ b/VonNeumannarchitectuur.html
@@ -9,7 +9,7 @@
 <li><a href="computeronderdelen.html">Uitleg Computer onderdelen</a></li> 
 <li><a href="computeronderdelen2.html">uitleg computeronderdelen deel 2</a></li> 
 <li><a href="VonNeumannarchitectuur.html">uitleg VonNeumannarchitectuur</a></li>
-<li><a href="Uitlegvideo">uitlegvideo over website</a></li>
+<li><a href="uitlegvideo">uitlegvideo over website</a></li>
   </ul> 
     
     <link rel="stylesheet" href="opmaak.css"> <!--link naar css-->
