--- a/bitmap.html
+++ b/bitmap.html
@@ -17,6 +17,7 @@
       <li><a href="computeronderdelen2.html">uitleg computeronderdelen deel 2</a></li> 
       <li><a href="VonNeumannarchitectuur.html">uitleg VonNeumannarchitectuur</a></li>
       <li><a href="uitlegvideo.html">uitlegvideo over website</a></li>
+      <li><a href="betoogAI.html">video over betoog</a></li>
     </ul> 
     
     <h1>Bitmap, vectorafbeeldingen en mobiele signalen</h1> <!--hoofdkopje van tekstgedeelte-->
