--- a/drielagenmodel.html
+++ b/drielagenmodel.html
@@ -15,6 +15,7 @@
       <li><a href="computeronderdelen2.html">uitleg computeronderdelen deel 2</a></li> 
       <li><a href="VonNeumannarchitectuur.html">uitleg VonNeumannarchitectuur</a></li>
       <li><a href="uitlegvideo.html">uitlegvideo over website</a></li>
+      <li><a href="betoogAI.html">video over betoog</a></li>
       <li class="dropdown">
           <a href="drielagenmodel.html" class="dropbtn">drielagenmodel</a>
           <div class="dropdown-content">
