--- a/fysiekelaag.html
+++ b/fysiekelaag.html
@@ -10,6 +10,7 @@
 <li><a href="computeronderdelen2.html">uitleg computeronderdelen deel 2</a></li> 
 <li><a href="VonNeumannarchitectuur.html">uitleg VonNeumannarchitectuur</a></li>
 <li><a href="uitlegvideo.html">uitlegvideo over website</a></li>
+<li><a href="betoogAI.html">video over betoog</a></li>
   </ul> 
     
     <link rel="stylesheet" href="opmaak.css"> <!--link naar css-->
