--- a/uitlegvideo.html
+++ b/uitlegvideo.html
@@ -16,6 +16,7 @@
       <li><a href="computeronderdelen2.html">uitleg computeronderdelen deel 2</a></li> 
       <li><a href="VonNeumannarchitectuur.html">uitleg VonNeumannarchitectuur</a></li>
       <li><a href="uitlegvideo.html">uitlegvideo over website</a></li>
+      <li><a href="betoogAI.html">video over betoog</a></li>
     </ul> 
     <h1>Uitlegvideo webiste</h1> <!--hoofdkopje van tekstgedeelte-->
  <a href="https://www.youtube.com/watch?v=GcGyg_UKMPs"> 
