--- a/betoogAI.html
+++ b/betoogAI.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html> <!--dit is de homepage van mijn site-->
+<html> <!--dit is het html-element-->
+  <head>
+    <title>Het eerste begin</title> <!--dit is de titel van de index-->
+    <link rel="stylesheet" href="opmaak.css"> <!--link naar css bestand-->
+    <meta charset="utf-8">
+  </head>
+ 
 
+  <body id="body1"> <!--achtergrondkleur body1 css-->
+    <ul> <!--unorderd list-->
+ 
+      <li><a href="index.html">Home</a> <!--link terug naar de homepage--></li>
+      <li><a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar binair stelsel--></li> 
+      <li><a href="kleurmodellen.html">Kleurmodellen</a> <!--link terug naar kleumodellen--></li>
+      <li><a href="bitmap.html">Bitmap</a> <!--link terug naar de pagina over bitmap--></li>
+      <li><a href="drielagenmodel.html">3-lagenmodel</a> <!--link naar de pagina over het 3-lagemodel--></li>
+      <li><a href="computeronderdelen.html">computeronderdelen</a> <!--link naar de pagina over computeronderdelen--></li>
+      <li><a href="computeronderdelen2.html">uitleg computeronderdelen deel 2</a></li> 
+      <li><a href="VonNeumannarchitectuur.html">uitleg VonNeumannarchitectuur</a></li>
+      <li><a href="uitlegvideo.html">uitlegvideo over website</a></li>
+      <li><a href="betoogAI.html">video over betoog</a></li>
+    </ul>
+
+
+    
