--- a/betoogAI.html
+++ b/betoogAI.html
@@ -23,4 +23,10 @@
     </ul>
 
 
-    
+      </ul> 
+    <h1>Uitlegvideo webiste</h1> <!--hoofdkopje van tekstgedeelte-->
+ <a href="https://www.youtube.com/watch?v=GcGyg_UKMPs"> 
+
+     <a href="https://www.youtube.com/watch?v=GcGyg_UKMPs">  
+        <img src="uitlegvideo.png" style="width:450px;height:350px"> 
+    </a> 
