--- a/betoogAI.html
+++ b/betoogAI.html
@@ -27,7 +27,7 @@
     <h1>Uitlegvideo webiste</h1> <!--hoofdkopje van tekstgedeelte-->
  <a href="https://www.youtube.com/watch?v=GcGyg_UKMPs"> 
 
-     <a href="https://www.youtube.com/watch?v=GcGyg_UKMPs">  
+     <a href="https://youtu.be/k2HGfZsR90Y">  
         <img src="uitlegvideo.png" style="width:450px;height:350px"> 
    
       <iframe width="1400" height="800" src="BetoogAI.png" title="Betoog AI | Buddy Media" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
