--- a/betoogAI.html
+++ b/betoogAI.html
@@ -28,7 +28,7 @@
  <a href="https://www.youtube.com/watch?v=GcGyg_UKMPs"> 
 
      <a href="https://youtu.be/k2HGfZsR90Y">  
-        <img src="uitlegvideo.png" style="width:450px;height:350px"> 
+        <img src="BetoogAI.wbep" style="width:450px;height:350px"> 
    
       <iframe width="1400" height="800" href="https://youtu.be/k2HGfZsR90Y" title="Betoog AI | Buddy Media" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
      
