--- a/betoogAI.html
+++ b/betoogAI.html
@@ -22,5 +22,6 @@
       <li><a href="betoogAI.html">video over betoog</a></li>
     </ul>
      </ul> 
-    <iframe width="1400" height="800" href="https://youtu.be/k2HGfZsR90Y" title="Betoog AI | Buddy Media" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </a> 
+    <h1>Uitlegvideo webiste</h1> <!--hoofdkopje van tekstgedeelte-->
+     <a href="https://youtu.be/k2HGfZsR90Y">  
+        <img src="BetoogAI.webp" style="width:450px;height:350px"> 
