--- a/betoogAI.html
+++ b/betoogAI.html
@@ -21,5 +21,5 @@
     </ul>
      </ul> 
     <h1>Uitlegvideo webiste</h1> <!--hoofdkopje van tekstgedeelte-->
-     <a href="https://youtu.be/k2HGfZsR90Y">  
+     <a href="https://youtu.be/GcGyg_UKMPs?si=HIRgP5OvAQh9ObM6"> 
         <img src="BetoogAI.webp" style="width:450px;height:350px"> 
