--- a/betoogAI.html
+++ b/betoogAI.html
@@ -20,6 +20,6 @@
       <li><a href="betoogAI.html">video over betoog</a></li>
     </ul>
      </ul> 
-    <h1>Uitlegvideo webiste</h1> <!--hoofdkopje van tekstgedeelte-->
-     <a href="https://youtu.be/GcGyg_UKMPs?si=HIRgP5OvAQh9ObM6"> 
+    <h1>Uitlegvideo betoog</h1> <!--hoofdkopje van tekstgedeelte-->
+     <a href="https://youtu.be/k2HGfZsR90Y?si=Nw2Uk1GlBuJhNw6u">
         <img src="BetoogAI.webp" style="width:450px;height:350px"> 
